Creating stub container to run as external metric service.